--- a/styles.css
+++ b/styles.css
@@ -116,46 +116,64 @@
 } */
 
 
-.sidebar {
-    position: fixed;
-    right: 0;
+.navbar {
+    position: sticky;
     top: 0;
-    width: 200px;
-    height: 100%;
+    width: 100%;
     background-color: #f9f9f9;
-    padding: 20px;
+    padding: 5px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
 
 
 
 
+
 /*  */
+.main-container{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
 
 
 
+/* Estadisticas y recomendaciones */
 
-/* Tables */
+h3 {
+    margin-bottom: 2px;
+}
+
+.sidebar{
+    display: block;
+    margin-left: 5px;
+}
+
+
 table {
-    width: 40%;
     border-collapse: collapse;
-    margin-bottom: 10px;
-    background: #fff;
     border: 1px solid #ddd;
-    border-radius: 8px;
 }
 th, td {
     text-align: left;
-    padding: 4px;
+    padding: 2px;
     border-bottom: 1px solid #ddd;
 }
-th {
-    background-color: #f0f0f0;
-    font-weight: bold;
+
+.statistics {
+    display: grid;
+    align-content: center;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
 }
-tr:last-child td {
-    border-bottom: none;
+
+.stat-item {
+    grid-column: span 2;
 }
+
+.stat-item-custom{
+    grid-column: span 3;
+}
+
 
 
 
