--- a/styles.css
+++ b/styles.css
@@ -255,6 +255,11 @@ th, td {
 
 /* SWITCH ROULLETE */
 
+.controls{
+    display: flex;
+    justify-content: space-between;
+}
+
 .switch {
     position: relative;
     display: inline-block;
@@ -303,6 +308,25 @@ input:checked + .slider:before {
 }
 
 
+
+
+/* BOTON RESET */
+
+#reset-button {
+    background-color: #f44336;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+#reset-button:hover {
+    background-color: #d32f2f;
+}
 
 
 
